# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "knative-cloudevents-example"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudevents-sdk = "0.1.0"
cloudevents-sdk-actix-web = "0.1.0"
cloudevents-sdk-reqwest = "0.1.0"
reqwest = { version = "0.10.4", default-features = false, features = ["rustls-tls"] }
actix-web = "2"
actix-rt = "1"
serde_json = "^1.0"
url = "^2.1"
log = "0.4.0"
env_logger = "0.7.1"
